For the current development, the user can 
see: https://github.com/dmpe/rbitly

###
Sept. 2015 - Smaller tweaks which do not impact any functionality of core RBitly
           - Bring up-to-date with R releases
           - Added support of Ow.ly (owned by Hootsuite.com)
           
July 2015 - Initial CRAN Release.
          - Majority of methods are implemented and ready to use.