@@ -2,7 +2,7 @@
 [![Coverage Status](https://coveralls.io/repos/dmpe/rbitly/badge.svg?branch=master&service=github)](https://coveralls.io/github/dmpe/rbitly?branch=master)
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/RBitly)](http://cran.r-project.org/package=RBitly)
 
-R package for Bit.ly & Bitly.com & j.mp & Ow.ly (:new:) and other custom domains
+R package for Bit.ly & j.mp & Ow.ly (:new:) and other custom domains
 =======
 
 ### Installing
@@ -18,6 +18,7 @@ Tested on Ubuntu 15.04 and Windows 10 (64 bit using [Revolution R Open](http://m
 ### Help needed !!!
 
 - Testers with the "enterprise" accounts. Please try using it and then report bugs in <https://github.com/dmpe/rbitly/issues>
+- Testing Ow.ly support (this requeres their API key)
 
 ### Looking for examples and current implementation status ?
 
