@@ -2,9 +2,10 @@ For the current development, the user can
 see: https://github.com/dmpe/rbitly
 
 ###
-Sept. 2015 - Smaller tweaks which do not impact any functionality of core RBitly
+Sept. 2015 - Smaller tweaks, which do not impact any functionality of the core RBitly
            - Bring up-to-date with R releases
-           - Added support of Ow.ly (owned by Hootsuite.com)
+           - Added (a very) experimental support of Ow.ly (owned by Hootsuite.com). Please report bugs to 
+           the maintainer (John Malc)
            
 July 2015 - Initial CRAN Release.
           - Majority of methods are implemented and ready to use.
